--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -9,7 +9,7 @@ RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 RUN rm -f /etc/nginx/conf.d/default.conf
 RUN rm -f /etc/nginx/conf.d/example_ssl.conf
 
-COPY jenkins.conf /etc/nginx/conf.d/nexus.conf
+COPY nexus.conf /etc/nginx/conf.d/nexus.conf
 COPY nginx.conf /etc/nginx/nginx.conf
 COPY docker-entrypoint.sh /
 RUN chmod +x docker-entrypoint.sh
