--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,18 @@
 version: '2'
 services:
   nexus:
-    image: sonatype/nexus3
+    image: fjudith/nexus
     volumes:
     - nexus-data:/nexus-data
     ports:
+    - 5000:5000
     - 8081:8081/tcp
     - 8082:8082/tcp
     - 8083:8083/tcp
     - 8084:8084/tcp
     - 8085:8085/tcp
   nexus-nginx:
-    image: nginx
+    image: fjudith/nexus:nginx
     links:
     - nexus:nexus
     ports:
