--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -2,8 +2,10 @@ FROM nginx:stable
 
 LABEL maintainer="Florian JUDITH <florian.judith.b@gmail.com>"
 
-RUN apt-get update -yqq && apt-get install -yqq \
-    openssl
+RUN apt-get update -yqq && apt-get install -yqq --no-install-recommends \
+    openssl \
+    certbot
+
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
 RUN rm -f /etc/nginx/conf.d/default.conf
