--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -16,7 +16,7 @@ COPY nginx.conf /etc/nginx/nginx.conf
 COPY docker-entrypoint.sh /
 RUN chmod +x docker-entrypoint.sh
 
-EXPOSE 80
+EXPOSE 80 443
 
 ENTRYPOINT ["/docker-entrypoint.sh"]
 CMD ["nginx"]
