--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,6 +30,17 @@ http {
     keepalive_timeout  65;
 
     client_max_body_size 0;
+    client_body_buffer_size 128k;
+
+    gzip  on;
+    gzip_http_version 1.0;
+    gzip_comp_level 6;
+    gzip_min_length 0;
+    gzip_buffers 16 8k;
+    gzip_proxied any;
+    gzip_types text/plain text/css text/xml text/javascript application/xml application/xml+rss application/javascript application/json;
+    gzip_disable "MSIE [1-6]\.";
+    gzip_vary on;
 
     include /etc/nginx/conf.d/*.conf;
 }
