--- a/nginx/nexus.conf
+++ b/nginx/nexus.conf
@@ -5,6 +5,11 @@ upstream nexus {
 upstream registry {
         server nexus:5000;
 }
+
+upstream registry-1 {
+        server nexus:8082;
+}
+
 server {
 	    listen 80;
 	    return 301 https://$host$request_uri;
@@ -16,13 +21,24 @@ server {
     keepalive_timeout  5 5;
     proxy_buffering    off;
 
+    # Enable SSL
     ssl on;
     ssl_certificate /etc/nginx/ssl/nginx.crt;
     ssl_certificate_key /etc/nginx/ssl/nginx.key;
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 
+    # Strong SSL Security
+    # https://raymii.org/s/tutorials/Strong_SSL_Security_On_nginx.html
+    ssl_protocols TLSv1.1 TLSv1.2;
+    ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:10m;
+
     # allow large uploads
-    client_max_body_size 1G;
+    client_max_body_size 4G;
+
+    # required to avoid HTTP 411: see Issue #1486 (https://github.com/docker/docker/issues/1486)
+    chunked_transfer_encoding on;
 
     location / {
 		# redirect to docker registry
@@ -33,8 +49,9 @@ server {
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      		proxy_set_header X-Forwarded-Proto "https";
-        }        
+      	proxy_set_header X-Forwarded-Proto "https";
+        proxy_read_timeout 900;
+    }        
 	location /test {
 		return 200 $request_uri;
     }
